Source/WebCore/loader/cache/CachedImage.h
@@ -128,10 +128,6 @@ private:
 
         // ImageObserver API
         URL sourceUrl() const override { return m_cachedImages[0]->url(); }
-        bool allowSubsampling() const final { return m_allowSubsampling; }
-        bool allowLargeImageAsyncDecoding() const override { return m_allowLargeImageAsyncDecoding; }
-        bool allowAnimatedImageAsyncDecoding() const override { return m_allowAnimatedImageAsyncDecoding; }
-        bool showDebugBackground() const final { return m_showDebugBackground; }
         void decodedSizeChanged(const Image*, long long delta) final;
         void didDraw(const Image*) final;
 
@@ -139,15 +135,6 @@ private:
         void changedInRect(const Image*, const IntRect*) final;
 
         Vector<CachedImage*> m_cachedImages;
-        // The default value of m_allowSubsampling should be the same as defaultImageSubsamplingEnabled in Settings.cpp
-#if PLATFORM(IOS)
-        bool m_allowSubsampling { true };
-#else
-        bool m_allowSubsampling { false };
-#endif
-        bool m_allowLargeImageAsyncDecoding { false };
-        bool m_allowAnimatedImageAsyncDecoding { false };
-        bool m_showDebugBackground { false };
     };
 
     void decodedSizeChanged(const Image*, long long delta);
